add jd for msft

--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
                             <div class="position-sticky clients-wrapper sticky-top rbt-sticky-top-adjust">
                                 <ul class="nav tab-navigation-button flex-column nav-pills me-3" id="v-pills-tab" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link" id="v-pills-home-tab" data-toggle="tab" href="#v-pills-Javascript" role="tab" aria-selected="true"><img src="assets/images/logo/logo-microsoft.png" alt="Microsoft-logo"></a>
+                                        <a class="nav-link active" id="v-pills-home-tab" data-toggle="tab" href="#v-pills-Javascript" role="tab" aria-selected="true"><img src="assets/images/logo/logo-microsoft.png" alt="Microsoft-logo"></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link active" id="v-pills-profile-tab" data-toggle="tab" href="#v-pills-Design" role="tab" aria-selected="true"><img src="assets/images/logo/logo-amazon.png" alt="Amazon-logo"></a>
+                                        <a class="nav-link" id="v-pills-profile-tab" data-toggle="tab" href="#v-pills-Design" role="tab" aria-selected="true"><img src="assets/images/logo/logo-amazon.png" alt="Amazon-logo"></a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" id="v-pills-wordpress-tab" data-toggle="tab" href="#v-pills-Wordpress" role="tab" aria-selected="true"><img src="assets/images/logo/logo-tmobile.png" alt="Tmobile-logo"></a>
@@ -313,7 +313,7 @@
                             <div class="d-flex align-items-start">
                                 <div class="tab-content" id="v-pills-tabContent">
                                     <!-- Start Microsoft Brand  -->
-                                    <div class="tab-pane fade show" id="v-pills-Javascript" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                                    <div class="tab-pane fade show active" id="v-pills-Javascript" role="tabpanel" aria-labelledby="v-pills-home-tab">
                                         <div class="client-card">
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
@@ -321,15 +321,15 @@
                                                         <h2 class="title">Software Development Engineer at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>X team - Mountain View, CA | Nov, 2021 - Present</span>
+                                                        <span>Office 365 team - Mountain View, CA | Nov, 2021 - Present</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
                                                     <p class="description">
                                                         <ul class=" ">
-                                                            <li>Working on scaling stuff</li>
-                                                            <li>More to come.</li>
-                                                            <li>Technology stack: C#, Azure</li>
+                                                            <li>Focusing on the load balancing & efficiency problems for the Office product’s backend service with <b>C#, Azure</b> & other tools.</li>
+                                                            <li>Investigating and scaling the services to support near real time classroom scale collaboration in Office Web App.</li>
+                                                            <li>Integrating micro services such as loggers, live site health seamlessly into the Office products.</li>
                                                         </ul>
                                                     </p>
                                                 </div>
@@ -339,7 +339,7 @@
                                     <!-- End Microsoft Brand  -->
 
                                     <!-- Start Amazon Brand  -->
-                                    <div class="tab-pane fade show active" id="v-pills-Design" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                                    <div class="tab-pane fade show" id="v-pills-Design" role="tabpanel" aria-labelledby="v-pills-profile-tab">
                                         <div class="client-card">
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
@@ -347,7 +347,7 @@
                                                         <h2 class="title">Software Development Engineer at
                                                             <a  href="https://www.amazon.com/hz/contact-us/" target="_blank">Amazon<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>Message Us Chat team - Seattle, WA | Dec, 2019 - Nov, 2020</span>
+                                                        <span>Chat Message team - Seattle, WA | 2019 - 2020</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
@@ -377,7 +377,7 @@
                                                         <h2 class="title">Associate Software Development Engineer at 
                                                             <a  href="https://www.tmobile.com" target="_blank">T-Mobile<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>Cloud team - Frisco, TX | Aug, 2018 - Nov, 2019</span>
+                                                        <span>Cloud team - Frisco, TX | 2018 - 2019</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
