--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer at
+                                                        <h2 class="title">Software Development Engineer II at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Office 365 team - Mountain View, CA | Nov, 2021 - Present</span>
@@ -344,7 +344,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer at
+                                                        <h2 class="title">Software Development Engineer I at
                                                             <a  href="https://www.amazon.com/hz/contact-us/" target="_blank">Amazon<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Chat Message team - Seattle, WA | 2019 - 2020</span>
@@ -374,7 +374,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Associate Software Development Engineer at 
+                                                        <h2 class="title">Assoc Software Development Engineer at 
                                                             <a  href="https://www.tmobile.com" target="_blank">T-Mobile<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Cloud team - Frisco, TX | 2018 - 2019</span>
