--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                                         <h2 class="title">Software Development Engineer II at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>Office 365 team - Mountain View, CA | Nov, 2021 - Present</span>
+                                                        <span>Scale team - Mountain View, CA | Nov, 2021 - Present</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
@@ -337,7 +337,7 @@
                                                         <h2 class="title">Software Development Engineer I at
                                                             <a  href="https://www.amazon.com/hz/contact-us/" target="_blank">Amazon<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>Chat Message team - Seattle, WA | 2019 - 2020</span>
+                                                        <span>Message team - Seattle, WA | 2019 - 2020</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
