--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                                         <h2 class="title">Software Development Engineer II at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
-                                                        <span>Scale team - Mountain View, CA | Nov, 2021 - Present</span>
+                                                        <span>Scale team - Mountain View, CA | 2021 - Present</span>
                                                     </div>
                                                 </div>
                                                 <div class="pricing-body">
