--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
                                                 <div class="pricing-body">
                                                     <p class="description">
                                                         <ul class=" ">
-                                                            <li>Focusing on the load balancing & efficiency problems for the Office product’s backend service with <b>C#, Azure</b> & other tools.</li>
+                                                            <li>Focusing on the load balancing & efficiency problems for the Office product’s backend service with <b>C#, Azure Data Explorer</b> & other tools.</li>
                                                             <li>Investigating and scaling the services to support near real time classroom scale collaboration in Office Web App.</li>
-                                                            <li>Integrating micro services such as loggers, live site health seamlessly into the Office products.</li>
+                                                            <li>Integrating services to reduce cost by increasing Machine Utilization and fixing CPU spikes to reduce the overall number of machines.</li>
                                                         </ul>
                                                     </p>
                                                 </div>
