--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer II at
+                                                        <h2 class="title">Software Development Engineer at
                                                             <a  href="https://www.microsoft.com" target="_blank">Microsoft<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Scale team - Mountain View, CA | 2021 - Present</span>
@@ -334,7 +334,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Software Development Engineer I at
+                                                        <h2 class="title">Software Development Engineer at
                                                             <a  href="https://www.amazon.com/hz/contact-us/" target="_blank">Amazon<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Message team - Seattle, WA | 2019 - 2020</span>
@@ -364,7 +364,7 @@
                                             <div class="rn-pricing">
                                                 <div class="pricing-header">
                                                     <div class="header-left">
-                                                        <h2 class="title">Assoc Software Development Engineer at 
+                                                        <h2 class="title">Software Development Engineer at 
                                                             <a  href="https://www.tmobile.com" target="_blank">T-Mobile<i class="feather-arrow-up-right"></i></a>
                                                         </h2>
                                                         <span>Cloud team - Frisco, TX | 2018 - 2019</span>
