update new stuff

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Khoa Nguyen - Software Engineer</title>
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
     <meta name="author" content="Khoa Nguyen" />
-    <meta name="keywords" content="Khoa Nguyen, imkhoa, iam khoa, i am khoa, i'm khoa, kdncode, software, engineer, developer, website, application, resume, portfolio">
+    <meta name="keywords" content="Khoa Nguyen, kodeauth, kdncode, software, engineer, developer, website, application, resume, portfolio">
     <meta name="description" content="Khoa Nguyen's portfolio website - Software Engineer.">
     <meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
@@ -177,7 +177,7 @@
                     <ul class="social-share d-flex liststyle">
                         <li class="github"><a target="_blank" href=https://bit.ly/32hGsS8><i data-feather="github"></i></a>
                         </li>
-                        <li class="linkedin"><a target="_blank" href="https://bit.ly/3yVMYcZ"><i data-feather="linkedin"></i></a>
+                        <li class="linkedin"><a target="_blank" href="https://bit.ly/423RbeM"><i data-feather="linkedin"></i></a>
                         </li>
                         <li class="twitter"><a target="_blank" href="https://bit.ly/3poXExw"><i data-feather="twitter"></i></a>
                         </li>
@@ -233,7 +233,7 @@
                                             <ul class="social-share d-flex liststyle">
                                                 <li class="github"><a target="_blank" href=https://bit.ly/32hGsS8><i data-feather="github"></i></a>
                                                 </li>
-                                                <li class="linkedin"><a target="_blank" href="https://bit.ly/3yVMYcZ"><i data-feather="linkedin"></i></a>
+                                                <li class="linkedin"><a target="_blank" href="https://bit.ly/423RbeM"><i data-feather="linkedin"></i></a>
                                                 </li>
                                                 <li class="twitter"><a target="_blank" href="https://bit.ly/3poXExw"><i data-feather="twitter"></i></a>
                                                 </li>
@@ -689,7 +689,7 @@
                                 <div class="name">Find me on</div>
                                 <div class="social-icone">
                                     <a target="_blank" href=https://bit.ly/32hGsS8><i data-feather="github"></i></a>
-                                    <a target="_blank" href="https://bit.ly/3yVMYcZ"><i data-feather="linkedin"></i></a>
+                                    <a target="_blank" href="https://bit.ly/423RbeM"><i data-feather="linkedin"></i></a>
                                     <a target="_blank" href="https://bit.ly/3poXExw"><i data-feather="twitter"></i></a>
                                 </div>
                             </div>
@@ -1059,14 +1059,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-area text-center">
-
                         <div class="logo">
                             <a href="index.html">
                                 <img src="assets/images/logo/logo.png" alt="logo">
                             </a>
                         </div>
-
-                        <p class="description mt--30"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://imkhoa.com">Khoa Nguyen</a></p></div>
+                        <p class="description mt--30"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> Khoa Nguyen</p>
+                    </div>
                 </div>
             </div>
         </div>
