--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
     <title>Khoa Nguyen - Software Engineer</title>
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer Portfolio"/>
     <meta name="author" content="Khoa Nguyen" />
-    <meta name="keywords" content="Khoa Nguyen, imkhoa, iam khoa, i am khoa, i'm khoa, kdncode, software, engineer, developer, website, application, resume, portfolio">
+    <meta name="keywords" content="Khoa Nguyen, kodeauth, kdncode, software, engineer, developer, website, application, resume, portfolio">
     <meta name="description" content="Khoa Nguyen's portfolio website - Software Engineer.">
     <meta property="og:site_name" content="Khoa Nguyen &mdash; Software Engineer">
     <meta property="og:title" content="Khoa Nguyen &mdash; Software Engineer">
@@ -244,7 +244,7 @@
                                     <a class="read-more-button" href="#"><i class="feather-external-link"></i></a>
                                 </div>
                             </div>
-                            <a class="over-link" href="https://bit.ly/3yVMYcZ" target="_blank"></a>
+                            <a class="over-link" href="https://bit.ly/423RbeM" target="_blank"></a>
                         </div>
                     </div>
                     <!-- End SIngle Service -->
@@ -334,14 +334,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="footer-area text-center">
-
                         <div class="logo">
                             <a href="index.html">
                                 <img src="assets/images/logo/logo.png" alt="logo">
                             </a>
                         </div>
-
-                        <p class="description mt--30"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> <a href="https://imkhoa.com">Khoa Nguyen</a></p></div>
+                        <p class="description mt--30"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> Khoa Nguyen</p>
+                    </div>
                 </div>
             </div>
         </div>
