optimize current year

--- a/links.html
+++ b/links.html
@@ -339,7 +339,9 @@
                                 <img src="assets/images/logo/logo.png" alt="logo">
                             </a>
                         </div>
-                        <p class="description mt--30"  data-wow-duration="1.2s">&copy; <script>document.write(new Date().getFullYear())</script> Khoa Nguyen</p>
+                        <p class="description mt--30"  data-wow-duration="1.2s">
+                            &copy; <span id="current-year"></span> Khoa Nguyen
+                        </p>
                     </div>
                 </div>
             </div>
@@ -359,6 +361,8 @@
     <script src="assets/js/vendor/particles.js"></script>
     <!-- main JS -->
     <script src="assets/js/main.js?v=1.0"></script>
+    <!-- customizable JS -->
+    <script src="assets/js/custom-script.js?v=1.0"></script>
 
 </body>
 
